// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array.prototype.includes should not import polyfill more than once 1`] = `
"import _Array_prototype_includes from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/includes';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_includes(list, 3)) {
  console.log(_Array_prototype_includes(list, 3));
} else {
  console.log('failure');
}"
`;

exports[`Array.prototype.includes should replace Array.prototype.includes with a polyfill 1`] = `
"import _Array_prototype_includes from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/includes';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_includes(list, 3) === true) {
  console.log('success');
} else {
  console.log('failure');
}"
`;

exports[`Array.prototype.includes should work when part of a call chain 1`] = `
"import _Array_prototype_includes from 'babel-plugin-transform-polyfills/polyfills/Array/prototype/includes';

const list = [1, 2, 3, 4, 5];
if (_Array_prototype_includes(list.slice(2), 3)) {
  console.log('success');
} else {
  console.log('failure');
}"
`;
